--- a/Frontend/views/payroll.html
+++ b/Frontend/views/payroll.html
@@ -565,6 +565,11 @@
                                     class="form-control form-control-custom bg-blue-input"></div>
                         </div>
                         <div class="row row-custom align-items-center">
+                            <div class="col-4"><label class="form-label-custom">WareHouse Comm</label></div>
+                            <div class="col-8"><input type="number" id="warehouseComm"
+                                    class="form-control form-control-custom bg-blue-input"></div>
+                        </div>
+                        <div class="row row-custom align-items-center">
                             <div class="col-4"><label class="form-label-custom">FixAllowance</label></div>
                             <div class="col-8"><input type="number" id="fixAllowance"
                                     class="form-control form-control-custom bg-blue-input"></div>
