--- a/Frontend/views/payroll.html
+++ b/Frontend/views/payroll.html
@@ -546,18 +546,22 @@
                                     class="form-control form-control-custom bg-blue-input"></div>
                         </div>
                         <div class="row row-custom align-items-center">
-                            <div class="col-4"><label class="form-label-custom">Rotti</label></div>
+                            <div class="col-4"><label class="form-label-custom">Rotti (Days)</label></div>
+                            <div class="col-3"><input type="number" id="rotiDays"
+                                    class="form-control form-control-custom bg-green-input"></div>
+                            <div class="col-1 p-0 text-center"><span
+                                    style="font-size: 0.75rem; font-weight:bold;">Rs</span></div>
                             <div class="col-4"><input type="number" id="rotiAmount"
                                     class="form-control form-control-custom bg-blue-input"></div>
-                            <div class="col-4"><input type="number" id="rotiDays"
-                                    class="form-control form-control-custom bg-green-input"></div>
                         </div>
                         <div class="row row-custom align-items-center">
-                            <div class="col-4"><label class="form-label-custom">Nashta</label></div>
+                            <div class="col-4"><label class="form-label-custom">Nashta (Days)</label></div>
+                            <div class="col-3"><input type="number" id="nashtaDays"
+                                    class="form-control form-control-custom bg-green-input"></div>
+                            <div class="col-1 p-0 text-center"><span
+                                    style="font-size: 0.75rem; font-weight:bold;">Rs</span></div>
                             <div class="col-4"><input type="number" id="nashtaAmount"
                                     class="form-control form-control-custom bg-blue-input"></div>
-                            <div class="col-4"><input type="number" id="nashtaDays"
-                                    class="form-control form-control-custom bg-green-input"></div>
                         </div>
                         <div class="row row-custom align-items-center">
                             <div class="col-4"><label class="form-label-custom">MonthlyComm</label></div>
