Refine Employee Sale Commission print report: match design to reference image, fix employee name resolution, and improve sale summary breakdown.

--- a/Frontend/views/groups.html
+++ b/Frontend/views/groups.html
@@ -520,6 +520,9 @@
                                         </li>
                                         <li><input type="checkbox" id="emp_commission" class="form-check-input"><label
                                                 class="checkbox-label" for="emp_commission">Emp. Commission</label></li>
+                                        <li><input type="checkbox" id="ug_emp_commission"
+                                                class="form-check-input"><label class="checkbox-label"
+                                                for="ug_emp_commission">UG Emp. Commission</label></li>
                                         <li><input type="checkbox" id="emp_clearance" class="form-check-input"><label
                                                 class="checkbox-label" for="emp_clearance">Emp. Clearance</label></li>
                                         <li><input type="checkbox" id="emp_adjustment" class="form-check-input"><label
