Update from Antigravity: Rename Price header to Cost in Invoice Print

--- a/Frontend/views/wh-print.html
+++ b/Frontend/views/wh-print.html
@@ -389,7 +389,7 @@
                     <th style="width: 70px;">Code</th>
                     <th>Item Description</th>
                     <th style="width: 50px;">Qty</th>
-                    <th style="width: 60px;">Price</th>
+                    <th style="width: 60px;">Cost</th>
                     <th style="width: 60px;" id="thRetail">Retail</th>
                     <th style="width: 60px;" id="thIncentive">Incentive</th>
                     <th style="width: 50px;">Disc %</th>
